{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 17,
  "lineage": "ee1b071c-9c97-27cc-08aa-7720ecb4c802",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4c08377ccbde172",
            "domain": "vpc",
            "id": "eipalloc-0b4c08377ccbde172",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-206-39-24.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.39.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-ap-south-1a",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-ap-south-1a",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:internet-gateway/igw-0af9142388e922ac3",
            "id": "igw-0af9142388e922ac3",
            "owner_id": "617686195573",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "vpc_id": "vpc-0fb7e9f52ddde4952"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b4c08377ccbde172",
            "connectivity_type": "public",
            "id": "nat-0cafb3260b62cffd3",
            "network_interface_id": "eni-02609dc9b9c4988a3",
            "private_ip": "10.0.101.237",
            "public_ip": "15.206.39.24",
            "subnet_id": "subnet-0d2db49723bce7f4f",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-ap-south-1a",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-ap-south-1a",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d46fcd066c0715151080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cafb3260b62cffd3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d46fcd066c071515",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0af9142388e922ac3",
            "id": "r-rtb-03f1cf4a79ab31c6b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03f1cf4a79ab31c6b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:route-table/rtb-0d46fcd066c071515",
            "id": "rtb-0d46fcd066c071515",
            "owner_id": "617686195573",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-private",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-private",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb7e9f52ddde4952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:route-table/rtb-03f1cf4a79ab31c6b",
            "id": "rtb-03f1cf4a79ab31c6b",
            "owner_id": "617686195573",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-public",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-public",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb7e9f52ddde4952"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0264587a1da2de87e",
            "route_table_id": "rtb-0d46fcd066c071515",
            "subnet_id": "subnet-0cd7cff39436b45ee"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de6924d84b16b31a",
            "route_table_id": "rtb-0d46fcd066c071515",
            "subnet_id": "subnet-024db4c0174e5245e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01218ef81500ede7d",
            "route_table_id": "rtb-03f1cf4a79ab31c6b",
            "subnet_id": "subnet-0d2db49723bce7f4f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad8b6b72894cae04",
            "route_table_id": "rtb-03f1cf4a79ab31c6b",
            "subnet_id": "subnet-0b024c6add3d132a2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:subnet/subnet-0cd7cff39436b45ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd7cff39436b45ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "617686195573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "agnello"
            },
            "vpc_id": "vpc-0fb7e9f52ddde4952"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:subnet/subnet-024db4c0174e5245e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024db4c0174e5245e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "617686195573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "agnello"
            },
            "vpc_id": "vpc-0fb7e9f52ddde4952"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:subnet/subnet-0d2db49723bce7f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2db49723bce7f4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617686195573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "agnello"
            },
            "vpc_id": "vpc-0fb7e9f52ddde4952"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:subnet/subnet-0b024c6add3d132a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b024c6add3d132a2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "617686195573",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "agnello-demo-naviteq",
              "kubernetes.io/cluster/agnello-agnello-demo-naviteq-eks-demo-naviteq": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "agnello"
            },
            "vpc_id": "vpc-0fb7e9f52ddde4952"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:617686195573:vpc/vpc-0fb7e9f52ddde4952",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03a3370b5986c78e2",
            "default_route_table_id": "rtb-02ed9b9ccfc9e0738",
            "default_security_group_id": "sg-0d205f30922c4f286",
            "dhcp_options_id": "dopt-0a7284d6a5728950f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0fb7e9f52ddde4952",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ed9b9ccfc9e0738",
            "owner_id": "617686195573",
            "tags": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            },
            "tags_all": {
              "Name": "agnello-agnello-demo-naviteq-eks-demo-naviteq",
              "environment": "agnello-demo-naviteq",
              "owners": "agnello"
            }
          }
        }
      ]
    }
  ]
}